
2004/05/30: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- parser/text: GWEN_Text_FromHexBuffer now ignores blanks
- parser/msgengine: added property "storedAs" which indicates the storage
    type when reading bin-values from within the data of a tag


2004/05/29: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- net/*: major speedup of IPC routines ;-)


2004/05/28: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- parser/msgengine.c:
  - added ELEM property "size" which indicates that an element should have a
    fixed size (as needed for Libchipcard)
  - added ELEM property "filler" which is used to fill an fixed-size element
    with a given byte
- parser/text: 
  - added functions for BCD reading and writing
  - added function GWEN_Text_CondenseBuffer which removes unnecessary blanks


===========================================================================
MARK: released gwenhywfar-0.9.10 (2004/05/27)
===========================================================================


2004/05/26: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- fixed a bug in MsgEngine (strchr doens't like if the character
  searched for is \0, which is a valid character when reading binary
  data such as bytes, words, dwords etc which are used by 
  Libchipcard2)
- fixed a bug in NetTransportSSL
- Gwen now compiles on Solaris (tested with SunOS 5.9)
- fixed some M4 macros (e.g. "find" on Solaris is not as powerfull as it is
  on Linux)


2004/05/25: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- parser/msgengine.c: fixed a bug which occurred if "maxnum" was
  zero in XML files


2004/05/24: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- parser/text: added function GWEN_Text_FromHexBuffer


2004/05/21: Martin Preuss<martin@libchipcard.de>