@@ -1032,6 +1032,61 @@ int testBase64(int argc, char **argv) {
 }
 
 
+int testBase64_2(int argc, char **argv) {
+  GWEN_BUFFER *dst;
+  GWEN_BUFFER *src;
+  FILE *f;
+  char buffer[1024];
+  int i;
+
+  if (argc<2) {
+    fprintf(stderr, "Name of a file needed\n");
+    return 1;
+  }
+
+  dst=GWEN_Buffer_new(0, 600000, 0, 1);
+  src=GWEN_Buffer_new(0, 600000, 0, 1);
+  f=fopen(argv[2], "r");
+  if (!f) {
+    perror(argv[2]);
+    return 1;
+  }
+  while(!feof(f)) {
+    i=fread(buffer, 1, sizeof(buffer), f);
+    if (i<1) {
+      perror("fread");
+      return 2;
+    }
+    GWEN_Buffer_AppendBytes(src, buffer, i);
+  } /* while */
+  fclose(f);
+
+  if (GWEN_Base64_Decode(GWEN_Buffer_GetStart(src),
+                         0,
+                         dst)) {
+    fprintf(stderr, "Error decoding file.\n");
+    return 3;
+  }
+
+  f=fopen("base64.out.bin", "w+");
+  if (!f) {
+    perror(argv[2]);
+    return 1;
+  }
+  if (fwrite(GWEN_Buffer_GetStart(dst),
+             GWEN_Buffer_GetUsedBytes(dst), 1, f)!=1) {
+    perror("fwrite");
+    return 4;
+  }
+  if (fclose(f)) {
+    perror("fclose");
+    return 4;
+  }
+
+  return 0;
+}
+
+
 
 int testHTTPc(int argc, char **argv) {
   GWEN_NETTRANSPORT *tr;
@@ -1275,6 +1330,8 @@ int main(int argc, char **argv) {
     rv=testSocketSSL(argc, argv);
   else if (strcasecmp(argv[1], "base64")==0)
     rv=testBase64(argc, argv);
+  else if (strcasecmp(argv[1], "base64_2")==0)
+    rv=testBase64_2(argc, argv);
   else if (strcasecmp(argv[1], "httpc")==0)
     rv=testHTTPc(argc, argv);
   else if (strcasecmp(argv[1], "httpd")==0)
